--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MahmoodGneam-Portfolio",
+  "name": "mahmoodgneam-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
